Add recording state management and UI updates in RecordPanel and Controller